--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -16,9 +16,7 @@
         </header>
         <div class="container">
             <section class="filters">
-                <button>
-                    Search
-                </button>
+                <button>Search</button>
             </section>
         </div>
         <footer>
