[Feature] point 6 fix

--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -21,21 +21,21 @@
                     <h4>California, Arizona...</h4>
                     <ul class="popover">
                         <li><h2>Arizona:</h2></li>
-                        <li>Page</li>
-                        <li>Page 2</li>
+                        <li><p>Page</p></li>
+                        <li><p>Page 2</p></li>
                         <li><h2>California:</h2></li>
-                        <li>San Francisco</li>
-                        <li>Los Altos</li>
+                        <li><p>San Francisco</p></li>
+                        <li><p>Los Altos</p></li>
                     </ul>
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
                     <h4>Internet, Kitchen...</h4>
                     <ul class="popover">
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
-                        <li>Iron</li>
+                        <li><p>Internet</p></li>
+                        <li><p>TV</p></li>
+                        <li><p>Kitchen</p></li>
+                        <li><p>Iron</p></li>
                     </ul>
                 </div>
                 <button>Search</button>
