--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -44,7 +44,9 @@
             <section class="places">
                 <h1>Places</h1>
                 <article>
-                    <h2>My home</h2>
+                    <h2>
+                        My home
+                    </h2>
                     <div class="price_by_night">
                         <p>$80</p>
                     </div>
